Update linux-gpu-tensorrt-daily-perf-pipeline.yml for Azure Pipelines

--- a/tools/ci_build/github/azure-pipelines/linux-gpu-tensorrt-daily-perf-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/linux-gpu-tensorrt-daily-perf-pipeline.yml
@@ -81,6 +81,8 @@ jobs:
 
   steps:
 
+    - script: 'ls -al /data/models/opset8'
+    
     - ${{ if eq(parameters.BuildORT, true) }}:
 
       - ${{ if eq(parameters.RunDocker, true) }}: 
