Update linux-gpu-tensorrt-daily-perf-pipeline.yml for Azure Pipelines

--- a/tools/ci_build/github/azure-pipelines/linux-gpu-tensorrt-daily-perf-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/linux-gpu-tensorrt-daily-perf-pipeline.yml
@@ -81,7 +81,7 @@ jobs:
 
   steps:
 
-    - script: 'ls -al /data/models/opset8'
+    - script: 'ls -al /data/models/opset8/test_squeezenet'
     
     - ${{ if eq(parameters.BuildORT, true) }}:
 
